A few styling fixes to correct layout bugs.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -16,6 +16,7 @@ body{
 h1, h2, h3, h4, h5, h6, p, a, div, input, button, legend, span, label{
 	font-family: 'Maven Pro', sans-serif;
 	font-style:normal;
+	text-decoration: none;
 }
 li{
 	font-family: 'Maven Pro', sans-serif;
@@ -400,7 +401,6 @@ progress::-moz-progress-bar { background: #E61652; }
 /*****FOOTER****/
 .footer{
 	width:100%;
-	height:550px;
 	background-image:url(Images/Homepage/footerbackground.png);
 	float:left;
 	margin-top:-3px;
@@ -483,17 +483,15 @@ progress::-moz-progress-bar { background: #E61652; }
 #mainContentArea{
 }
 .footerContentContainer{
-	height:410px;
 	width:100%;
 	float: left;
 }
 .footerLinkListContainer{
 	width:460px;
-	height:100%;
+	float: left;
 }
 .footerLinkList{
 	float: left;
-    height: 100%;
     list-style: none outside none;
     width: 190px;
 }
@@ -1910,7 +1908,7 @@ form.prodViewerAddToCartFormQuickview{
 .productMfg{
 	color:#736a5b;
 }
-.productMfgCont h5.productMfg a{
+h5.productMfg a{
 	color:#e91454;
 	text-decoration:none;
 }
